<resources>
    <string name="app_name">Encrypto</string>
    <string name="enter_key">Please Set Your Secret ENCRYPTION KEY For Your ID Passwords.</string>
    <string name="next">Next</string>
    <string name="bio_warning">Use your BioMetric or Password to access the App</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="set">Set</string>
    <string name="confirm_key_text">Confirm Encryption Key</string>
    <string name="add_details">Add Details</string>
    <string name="show_credentials">Show Credentials</string>
    <string name="username">Username</string>
    <string name="account_type">Account Type</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="add_credentials">Add Your Credentials You Want To Save</string>
    <string name="username_">Username :</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="set_key">Set Key</string>
    <string name="from">From</string>
    <string name="sk_developers_studio">SK Developers Studio</string>
    <string name="authenticate">Authenticate</string>
    <string name="pin_must_be_6_digit_numeric">Pin Must Be 6 Digit Numeric</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="please_enter_your_pin_to_unlock">Please enter your Pin to unlock</string>
</resources>